--- a/gql-server/package.json
+++ b/gql-server/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "teja",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "join-monster": "^3.1.1",
     "pg": "^8.8.0"
   }
 }
